Spacing fix for stickyHeader

--- a/src/components/StickyHeader/stickyHeader.module.css
+++ b/src/components/StickyHeader/stickyHeader.module.css
@@ -15,7 +15,8 @@
 
 .container[aria-hidden="false"] {
   pointer-events: initial;
-  top: var(--theme-navbar-height);
+  /* Offset by 1 to eliminate spaces at top */
+  top: calc(var(--theme-navbar-height) - 1px);
   opacity: 1;
   transition: top 400ms ease, opacity 0ms 0ms;
 }
